# google-hackathon

./: CHANGELOG.md  README.md  agent_manager.py  app.py  env_example.txt
financial_health_score_agent/: README.md  __init__.py  agent.py  data_preprocessor.py  mcp_direct_calculator.py  prompt.py  pyproject.toml  scoring_engine.py  tools.py  visualization_engine.py
financial_health_score_agent/sub_agents/: __init__.py
financial_health_score_agent/sub_agents/recommendation_engine/: __init__.py  agent.py  prompt.py
financial_health_score_agent/sub_agents/trend_analyzer/: __init__.py  agent.py  prompt.py
flask_agent_server/: README.md  app.py  demo.py  run.py
flask_agent_server/oracle_agent/: README.md
flask_agent_server/static/css/: chat.css
flask_agent_server/static/js/: chat.js
flask_agent_server/templates/: 500.html  index.html
flask_agent_server2/: .env  README.md  agent_manager.py  app.py  config.py  requirements.txt  run.py  test_agent_loading.py
flask_agent_server2/oracle_agent/: agent.py
flask_agent_server2/parallel_universe_agent/: .env  __init__.py  agent.py
flask_agent_server2/static/css/: chat.css  timeline.css
flask_agent_server2/static/js/: chat.js  timeline.js
flask_agent_server2/tax_advisor_agent/: README.md  __init__.py  agent.py  prompt.py  pyproject.toml
flask_agent_server2/tax_advisor_agent/sub_agents/deduction_optimizer/: prompt.py
flask_agent_server2/tax_advisor_agent/sub_agents/tax_analyzer/: __init__.py  agent.py
flask_agent_server2/templates/: agent_selector.html  index.html  timeline.html
oracle_agent/: .env  __init__.py  agent.py  prompt.py
oracle_agent/sub_agents/: __init__.py
oracle_agent/sub_agents/financial_analyzer/: __init__.py  agent.py  prompt.py
oracle_agent/sub_agents/financial_health_score/: __init__.py  prompt.py
parallel_universe_agent/: SEQUENTIAL_IMPLEMENTATION.md  prompt.py
static/css/: chat.css
static/js/: chat.js
tax_advisor_agent/sub_agents/: __init__.py
templates/: 404.html  index.html
(+27 files in other folders)
